# ethical-ai-toolkit

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
data/: german-risk-scoring.csv
docs/: index.md  quickstart.md
docs/best-practices/: about.md
docs/home/: ethics.md  installation.md
docs/stylesheets/: extra.css
ethicalai/: dataset.py  study.py  utils.py
notebooks/: Ethical-AI demo datacraft.ipynb  EthicalAI - vTheo.ipynb  NBK_class_conterfactual_design_2021-09-28.ipynb  README.md  ethical_ai.ipynb  nathan_tests.ipynb  new_notebook.bat  radar_plot_by_group_dalex.ipynb
notebooks/_old/: fairness_metrics.ipynb
notebooks/playing notebooks/: backend_notebook.ipynb  front_notebook.ipynb
scripts/: analyze_flake8_linting.bat  analyze_pylint_linting.bat  apply_black_formatting.bat  create_package_wheel.bat  deploy_docs_on_github_pages.bat  deploy_package_pypi.bat  launch_documentation_server.bat  launch_streamlit_app.bat
scripts/starter/: new_notebook.py
scripts/starter/assets/: starter_package_config.yaml  template_notebook.ipynb
scripts/starter/starter_library/: templating.py
